lcs-web (2.4.8.3~1) Lcs; urgency=low

  [ Philippe LECLERC ]    
  * Change the test status of a module in gestpack.sh

  [ Jean-Luc Chretien ]
  * Fix bug in createmaildir.sh and mkhdir.sh

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Wed, 07 Sep 2011 18:23:29 +0200

lcs-web (2.4.8.2) Lcs; urgency=low

  * Fix bug in createmaildir.sh

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 24 Jun 2011 09:56:48 +0200

lcs-web (2.4.8.1) Lcs; urgency=low

  [ Jean-Luc Chrétien ]
  * Fix charset in Admin/edit_params.php 
  * Fix bug in import comptes on scripts/import_comptes.php

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 17 Jun 2011 17:26:51 +0200

lcs-web (2.4.8) Lcs; urgency=low

  [ Jean-Luc Chrétien ]
  * Modify lcs-etch2lenny script
  * Add a set of pics in Annu/images
  * Fix rights on skel user Profile in mkhdir.sh 
  * Add test if lcs-deskto is activate and browser is not ie5 or ie6 in lcs/index.php
  * Update and synchronize with SE3 scripts : Import Sconet
  * Add chg_gidNumber.sh in /usr/share/lcs/scripts
  * Replace deprecated PHP 5.3 functions
  * Don't allow reauthentication if already authenticate in auth.php
  * Rename function search_people_trash to search_people_trash_lcs 
  * Modify mkTicket.rb to generate CAS ticket with gem rubycas-server
  * Fix make replica config in mkSlapdConf.sh for Etch or Lenny...
  * Fix typo in user_lcs.inc.php
  * Add change-ip.sh script in /usr/share/lcs/scripts
  * Delete Roundcube session cookie in functions.inc.php
  * Modify applis.php and accueil.php for filexplorer module
  * Modify barre.php for roundcube webmail
  * Add cron.weekly task lcs-clean-sessions
  * Add scripts to create all Maildir users
  * Add depend on lcs-libjs
  * Remove www/lib folder with js libraries
  * Fix bug in auth.php  mysql_query statusages
  * LcSe.pm : Ban following logins : prof docs progs netlogon classes homes admhomes profiles